--- a/changelog/unreleased/kong/refactor_dns_client.yml
+++ b/changelog/unreleased/kong/refactor_dns_client.yml
@@ -1,8 +1,7 @@
 message: >
   Starting from this version, a new DNS client library has been implemented and added into Kong. The new DNS client library has the following changes
-  - The new library now leverages `lua-resty-mlcache` for DNS record caching.
-  - Introduced observable statistics for the new DNS client, and a new Admin API `/dns` to retrieve them.
-  - Introduced a new option `legacy_dns_client` to toggle whether to use the new DNS client library.
+  - Introduced global caching for DNS records across workers, significantly reducing the query load on DNS servers.
+  - Introduced observable statistics for the new DNS client, and a new Admin API `/status/dns` to retrieve them.
   - Deprecated the `dns_no_sync` option in the context of the new DNS client library. With the new library, multiple DNS queries for the same name will always be synchronized (even across workers). The `dns_no_sync` option remains functional with the legacy DNS client library.
 type: feature
 scope: Core
