- update gke e2e api test workflow file (#8648)
- remove licenses and vaults-hcv tests from gke run

Co-authored-by: Tony Dong <tony.dong@konghq.com@t-dong-mbp.mynetworksettings.com>

--- a/.github/actions/gw-slack-results/action.yml
+++ b/.github/actions/gw-slack-results/action.yml
@@ -43,6 +43,9 @@ runs:
 
           echo "finalTitle=Gateway API Release Package Tests:  ( $package_name ), Install Method: ($install_method), ${{ inputs.gw_mode }} mode" >> $GITHUB_ENV
 
+        elif [[ "${{ inputs.test_title }}" == *"GKE"* ]]; then
+          echo "finalTitle=Gateway E2E API Tests: GKE" >> $GITHUB_ENV
+
         else
           echo "finalTitle=Gateway API Tests: ${{ inputs.gw_mode }} mode" >> $GITHUB_ENV
         fi
