--- a/.github/workflows/gateway-cluster-api-tests.yml
+++ b/.github/workflows/gateway-cluster-api-tests.yml
@@ -6,7 +6,7 @@ on:
       kong_repository:
         description: 'Kong repository to test'
         required: true
-        default: 'kong/kong-gateway-internal'
+        default: 'kong/kong-gateway-dev'
       kong_version_tag:
         description: 'Kong version to test'
         required: true
@@ -29,6 +29,10 @@ on:
         default: 'false'
       destroy_cluster:
         description: 'Destroy the k8s cluster after the tests'
+        required: false
+        default: 'true'
+      send_slack_results:
+        description: 'Send test result notifications to slack'
         required: false
         default: 'true'
 
@@ -64,16 +68,21 @@ on:
         required: false
         type: 'string'
         default: 'true'
+      send_slack_results:
+        description: 'Send test result notifications to slack'
+        required: false
+        type: 'string'
+        default: 'true'
 
   schedule:
     - cron: '0 11 * * 6'
 
 env:
-  TF_VAR_kong_repository: ${{ inputs.kong_repository || 'kong/kong-gateway-internal' }}
-  TF_VAR_kong_version_tag: ${{ inputs.kong_version_tag || 'nightly-ubuntu' }}
+  TF_VAR_kong_repository: ${{ inputs.kong_repository || 'kong/kong-gateway-dev' }}
+  TF_VAR_kong_version: ${{ inputs.kong_version_tag || 'nightly-ubuntu' }}
   TF_VAR_kong_effective_semver: ${{ inputs.kong_effective_semver || '3.7.0.0' }}
-  TF_VAR_gke_project_id: ${{ inputs.gke_project_id || 'gcp-sdet-test' }}
-  GCP_SERVICE_ACCOUNT_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+  TF_VAR_project_id: ${{ inputs.gke_project_id || 'gcp-sdet-test' }}
+  GCP_SERVICE_ACCOUNT_KEY: ${{ secrets.TEST_API_GCP_SERVICE_ACCOUNT }}
   SEND_SLACK_RESULTS: ${{ github.event.inputs.send_slack_results }}
   NPM_TOKEN: ${{ secrets.NPM_TOKEN_PRIVATE_READ }}
   # if this is a push event, or it is pull request but not from a fork, and not from dependabot (dependabot does not use forks), then this PR will have access to secrets
@@ -81,6 +90,7 @@ env:
   AWS_ACCESS_KEY_ID: ${{ secrets.TEST_API_AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.TEST_API_AWS_SECRET_ACCESS_KEY }}
   VERBOSE_RESPONSE_LOGS: ${{ inputs.enable_verbose_response_logging }}
+  CI: 'false'
 
 jobs:
   gateway_cluster_api_tests:
@@ -95,7 +105,7 @@ jobs:
       - name: Set up google auth
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+          credentials_json: ${{ secrets.TEST_API_GCP_SERVICE_ACCOUNT }}
 
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v2'
@@ -119,40 +129,41 @@ jobs:
           terraform_wrapper: false
       
       - name: Terraform Init gke cluster
-        run: terraform -chidir=gateway-docker-compose-generator/infrastructure/gateway-terraform-gke/provision-gke init -input=false
+        run: terraform -chdir=gateway-docker-compose-generator/infrastructure/gateway-terraform-gke/provision-gke init -input=false
       
       - name: Terraform Plan gke cluster
-        run: terraform -chidir=gateway-docker-compose-generator/infrastructure/gateway-terraform-gke/provision-gke plan -out gwgke.plan -input=false
+        run: terraform -chdir=gateway-docker-compose-generator/infrastructure/gateway-terraform-gke/provision-gke plan -out gwgke.plan -input=false
       
       - name: Terraform Apply gke cluster
-        run: terraform -chidir=gateway-docker-compose-generator/infrastructure/gateway-terraform-gke/provision-gke apply -auto-approve gwgke.plan
+        run: terraform -chdir=gateway-docker-compose-generator/infrastructure/gateway-terraform-gke/provision-gke apply -auto-approve gwgke.plan
     
       - name: Connect to the gke cluster
         env:
-          gke_cluster_name: ${{ env.TF_VAR_gke_project_id }}-gke
+          gke_cluster_name: ${{ env.TF_VAR_project_id }}-gke
         run: |
           gcloud container clusters get-credentials $gke_cluster_name --region=us-central1
+          kubectl config current-context
 
       - name: terraform init kong deployment
-        run: terraform -chidir=gateway-docker-compose-generator/infrastructure/gateway-terraform-gke/deploy-k8s init -input=false
+        run: terraform -chdir=gateway-docker-compose-generator/infrastructure/gateway-terraform-gke/deploy-k8s init -input=false
 
       - name: terraform plan kong deployment
-        run: terraform -chidir=gateway-docker-compose-generator/infrastructure/gateway-terraform-gke/deploy-k8s plan -out gwgkedeploy.plan -input=false
+        run: terraform -chdir=gateway-docker-compose-generator/infrastructure/gateway-terraform-gke/deploy-k8s plan -out gwgkedeploy.plan -input=false
 
       - name: terraform apply kong deployment
-        run: terraform -chidir=gateway-docker-compose-generator/infrastructure/gateway-terraform-gke/deploy-k8s apply -auto-approve gwgkedeploy.plan
+        run: terraform -chdir=gateway-docker-compose-generator/infrastructure/gateway-terraform-gke/deploy-k8s apply -auto-approve gwgkedeploy.plan
       
-      - name: get pod name
-        run: |
-          echo "KONG_CP_POD = $(kubectl get pods -n kong -l app=kong-cp-kong -o=jsonpath='{.items[0].metadata.name}' --field-selector=status.phase=Running)" >> $GITHUB_ENV
-          echo "KONG_DP_POD = $(kubectl get pods -n kong -l app=kong-dp1-kong -o=jsonpath='{.items[0].metadata.name}' --field-selector=status.phase=Running)" >> $GITHUB_ENV
-          echo "REDIS_POD = $(kubectl get pods -n kong -l app=redis -o=jsonpath='{.items[0].metadata.name}' --field-selector=status.phase=Running)" >> $GITHUB_ENV
-
       - name: portforward pod to local with kubectl
+        env:
+          gke_cluster_name: ${{ env.TF_VAR_project_id }}-gke
         run: |
-          kubectl port-forward $KONG_CP_POD 8001:8001 8002:8002 -n kong
-          kubectl port-forward $KONG_DP_POD 8000:8000 8443:8443 -n kong
-          kubectl port-forward $REDIS_POD 6379:6379 -n kong
+          export USE_GKE_GCLOUD_AUTH_PLUGIN=True
+          gcloud components install gke-gcloud-auth-plugin
+          gcloud container clusters get-credentials $gke_cluster_name --region=us-central1
+          kubectl get pods -n kong
+          kubectl port-forward $(kubectl get pods -n kong -l app=kong-cp-kong -o=jsonpath='{.items[0].metadata.name}' --field-selector=status.phase=Running) 8001:8001 8002:8002 -n kong &
+          kubectl port-forward $(kubectl get pods -n kong -l app=kong-dp1-kong -o=jsonpath='{.items[0].metadata.name}' --field-selector=status.phase=Running) 8000:8000 8443:8443 -n kong &
+          kubectl port-forward $(kubectl get pods -n kong -l app=redis -o=jsonpath='{.items[0].metadata.name}' --field-selector=status.phase=Running) 6379:6379 -n kong &
 
       - name: Copy .npmrc
         run: cp .npmrc.ci .npmrc
@@ -191,6 +202,7 @@ jobs:
           job_status: ${{ job.status }}
           test_title: 'GKE Cluster'
           slack_url: ${{ secrets.TEST_API_SLACK_WEBHOOK_URL }}
+          git_commit_sha: 'N/A'
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v3
@@ -202,5 +214,5 @@ jobs:
           retention-days: 3
 
       - name: Terraform Destroy gke cluster
-        if: ${{ inputs.destroy_cluster == 'true' }}
-        run: terraform -chidir=gateway-docker-compose-generator/infrastructure/gateway-terraform-gke/provision-gke destroy -auto-approve
+        if: ${{ always() && inputs.destroy_cluster == 'true' }}
+        run: terraform -chdir=gateway-docker-compose-generator/infrastructure/gateway-terraform-gke/provision-gke destroy -auto-approve
