--- a/.github/workflows/gateway-api-tests-matrix.yml
+++ b/.github/workflows/gateway-api-tests-matrix.yml
@@ -244,6 +244,14 @@ jobs:
           if ${{ contains(env.GW_IMAGE, 'fips') }}; then FIPS_MODE=on; else FIPS_MODE=off; fi;
           echo "FIPS_MODE=$FIPS_MODE" >> $GITHUB_ENV
 
+          if [[ $RUN_SPEC == "smoke" || $RUN_SPEC == "custom-plugins" || $RUN_SPEC == 'all' ]]; then
+            CUSTOM_PLUGIN=true
+          else
+            CUSTOM_PLUGIN=false
+          fi
+          echo "CUSTOM_PLUGIN_VAR=$CUSTOM_PLUGIN" >> $GITHUB_ENV
+          echo "CUSTOM_PLUGIN is $CUSTOM_PLUGIN"
+
       - name: Start Gateway
         run: cd gateway-docker-compose-generator && make generate && make start
         env:
@@ -267,7 +275,7 @@ jobs:
           APPD_PASSWORD: ${{ secrets.TEST_API_APPD_PASSWORD }}
           WASM: true
           # set CUSTOM_PLUGIN to false in case of amazonlinux-2 image
-          CUSTOM_PLUGIN: ${{ (endsWith(env.GW_IMAGE, 'amazonlinux-2') || env.RUN_SPEC == 'non-smoke') && 'false' || 'true' }}
+          CUSTOM_PLUGIN: ${{ endsWith(env.GW_IMAGE, 'amazonlinux-2') && 'false' || env.CUSTOM_PLUGIN_VAR }}
 
       - name: Logs from Gateway Start
         if: failure()
@@ -401,6 +409,16 @@ jobs:
           username: ${{ secrets.GHA_DOCKERHUB_PULL_USER }}
           password: ${{ secrets.GHA_KONG_ORG_DOCKERHUB_PULL_TOKEN }}
 
+      - name: Set CUSTOM_PLUGIN Variable
+        run: |
+          if [[ $RUN_SPEC == "smoke" || $RUN_SPEC == "custom-plugins" || $RUN_SPEC == 'all' ]]; then
+            CUSTOM_PLUGIN=true
+          else
+            CUSTOM_PLUGIN=false
+          fi
+          echo "CUSTOM_PLUGIN_VAR=$CUSTOM_PLUGIN" >> $GITHUB_ENV
+          echo "CUSTOM_PLUGIN is $CUSTOM_PLUGIN"
+
       - name: Start Gateway
         run: cd gateway-docker-compose-generator && make generate && make start
         env:
@@ -426,7 +444,7 @@ jobs:
           APPD_PASSWORD: ${{ secrets.TEST_API_APPD_PASSWORD }}
           WASM: true
           # set CUSTOM_PLUGIN to false in case of amazonlinux-2 image
-          CUSTOM_PLUGIN: ${{ (endsWith(env.GW_IMAGE, 'amazonlinux-2') || env.RUN_SPEC == 'non-smoke') && 'false' || 'true' }}
+          CUSTOM_PLUGIN: ${{ endsWith(env.GW_IMAGE, 'amazonlinux-2') && 'false' || env.CUSTOM_PLUGIN_VAR }}
 
       - name: Logs from Gateway Start
         if: failure()
