--- a/.github/workflows/gateway-api-tests.yml
+++ b/.github/workflows/gateway-api-tests.yml
@@ -115,6 +115,15 @@ jobs:
           if ${{ contains(env.GW_IMAGE, 'fips') }}; then FIPS_MODE=on; else FIPS_MODE=off; fi;
           echo "FIPS_MODE=$FIPS_MODE" >> $GITHUB_ENV
 
+          if [[ $RUN_SPEC == "smoke" || $RUN_SPEC == "custom-plugins" || $RUN_SPEC == 'all' ]]; then
+            CUSTOM_PLUGIN=true
+          else
+            CUSTOM_PLUGIN=false
+          fi
+          echo "CUSTOM_PLUGIN_VAR=$CUSTOM_PLUGIN" >> $GITHUB_ENV
+          echo "CUSTOM_PLUGIN is $CUSTOM_PLUGIN"
+
+
       - name: Start Gateway
         run: cd gateway-docker-compose-generator && make generate && cat docker-compose.yml && make start
         env:
@@ -136,8 +145,8 @@ jobs:
           AZURE_TENANT_ID: ${{ secrets.TEST_API_AZURE_TENANT_ID }}
           AZURE_CLIENT_ID: ${{ secrets.TEST_API_AZURE_CLIENT_ID }}
           AZURE_CLIENT_SECRET: ${{ secrets.TEST_API_AZURE_CLIENT_SECRET }}
-          # set CUSTOM_PLUGIN to false in case of amazonlinux-2 image or non-smoke tests
-          CUSTOM_PLUGIN: ${{ (endsWith(env.GW_IMAGE, 'amazonlinux-2') || env.RUN_SPEC == 'non-smoke') && 'false' || 'true' }}
+          # set CUSTOM_PLUGIN to false in case of amazonlinux-2 image
+          CUSTOM_PLUGIN: ${{ endsWith(env.GW_IMAGE, 'amazonlinux-2') && 'false' || env.CUSTOM_PLUGIN_VAR }}
           APPD_PASSWORD: ${{ secrets.TEST_API_APPD_PASSWORD }}
 
       - name: Logs from Gateway Start
