--- a/changelog/unreleased/kong/route-wildcard-snis.yml
+++ b/changelog/unreleased/kong/route-wildcard-snis.yml
@@ -1,3 +1,3 @@
-message: extend `route.snis` to support wildcard.
+message: extend the field `snis` of the entity `routes` to support wildcard for the leftmost or the rightmost character. Note only the leftmost OR rightmost character can be the wildcard, otherwise the validation will fail.
 type: feature
 scope: Core
