chore(ci): cherry-pick only PRs targetting master

--- a/.github/workflows/cherry-picks.yml
+++ b/.github/workflows/cherry-picks.yml
@@ -12,6 +12,7 @@ jobs:
     # or when a comment containing `/cherry-pick` is created
     # and the author is a member, collaborator or owner
     if: >
+      github.ref == 'refs/heads/master' &&
       (
         github.event_name == 'pull_request_target' &&
         github.event.pull_request.merged
