--- a/.github/workflows/gateway-api-tests.yml
+++ b/.github/workflows/gateway-api-tests.yml
@@ -110,6 +110,9 @@ jobs:
           username: ${{ secrets.GHA_DOCKERHUB_PULL_USER }}
           password: ${{ secrets.GHA_KONG_ORG_DOCKERHUB_PULL_TOKEN }}
 
+      - name: Add domain.test to hostnames for ACME Plugin tests
+        run: echo "127.0.0.1 domain.test" | sudo tee -a /etc/hosts
+
       - name: Check for FIPS image
         run: |
           if ${{ contains(env.GW_IMAGE, 'fips') }}; then FIPS_MODE=on; else FIPS_MODE=off; fi;
@@ -148,6 +151,7 @@ jobs:
           # set CUSTOM_PLUGIN to false in case of amazonlinux-2 image
           CUSTOM_PLUGIN: ${{ endsWith(env.GW_IMAGE, 'amazonlinux-2') && 'false' || env.CUSTOM_PLUGIN_VAR }}
           APPD_PASSWORD: ${{ secrets.TEST_API_APPD_PASSWORD }}
+          ACME: true
 
       - name: Logs from Gateway Start
         if: failure()
