fix(jwt-signer): prevent all upstream headers from being configured as the same header (#8710)
The values of access_token_upstream_header, channel_token_upstream_header, original_access_token_upstream_header and original_channel_token_upstream_header should be different. If they are the same, then in the forwarded request, the value in that specific header will be overridden.

KAG-4181

--- a/changelog/unreleased/kong-ee/jwt-signer-store-origin-jwt.yml
+++ b/changelog/unreleased/kong-ee/jwt-signer-store-origin-jwt.yml
@@ -1,3 +1,5 @@
-message: "**JWT-Signer:** The plugin now supports adding the original JWT(s) to the upstream request header by specifying the names of the upstream request header with `original_access_token_upstream_header` and `original_channel_token_upstream_header`."
+message: |
+  **JWT-Signer:** The plugin now supports adding the original JWT(s) to the upstream request header by specifying the names of the upstream request header with `original_access_token_upstream_header` and `original_channel_token_upstream_header`.
+  And `access_token_upstream_header`, `channel_token_upstream_header`, `original_access_token_upstream_header`, and `original_channel_token_upstream_header` should not have the same value.
 type: feature
 scope: Plugin
