--- a/changelog/unreleased/kong/fix_balancer_healthecker_unexpected_panic.yml
+++ b/changelog/unreleased/kong/fix_balancer_healthecker_unexpected_panic.yml
@@ -1,3 +1,3 @@
-message: "**Core**: fix balancer stop_healthchecks function unexpected table nil panic"
+message: "**Core**: Fixed unexpected table nil panic in the balancer's stop_healthchecks function"
 type: bugfix
 scope: Core
