feat(plugins): azure content safety plugin (#8697)
* feat(plugins): add ai azure content safety introspection plugin

---------

Signed-off-by: Joshua Schmid <jaiks@posteo.de>
Co-authored-by: Thijs Schreijer <thijs@thijsschreijer.nl>
Co-authored-by: Joshua Schmid <jaiks@posteo.de>

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -346,6 +346,10 @@ plugins/xml-threat-protection:
 - changed-files:
   - any-glob-to-any-file: kong/plugins/xml-threat-protection/**/*
 
+plugins-ee/ai-azure-content-safety:
+- changed-files:
+  - any-glob-to-any-file: plugins-ee/ai-azure-content-safety/**/*
+
 plugins-ee/oas-validation:
 - changed-files:
   - any-glob-to-any-file: plugins-ee/oas-validation/**/*
