--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -133,6 +133,18 @@ config_setting(
     visibility = ["//visibility:public"],
 )
 
+config_setting(
+    name = "debug_linux_flag",
+    constraint_values = [
+        "@platforms//os:linux",
+    ],
+    flag_values = {
+        ":debug": "true",
+    },
+    visibility = ["//visibility:public"],
+)
+
+# --//:brotli=true
 bool_flag(
     name = "brotli",
     build_setting_default = True,
@@ -142,17 +154,6 @@ config_setting(
     name = "brotli_flag",
     flag_values = {
         ":brotli": "true",
-    },
-    visibility = ["//visibility:public"],
-)
-
-config_setting(
-    name = "debug_linux_flag",
-    constraint_values = [
-        "@platforms//os:linux",
-    ],
-    flag_values = {
-        ":debug": "true",
     },
     visibility = ["//visibility:public"],
 )
@@ -199,7 +200,7 @@ config_setting(
     visibility = ["//visibility:public"],
 )
 
-# --//:private_luarocks=false
+# --//:private_luarocks=true
 # builds from internal luarocks server
 bool_flag(
     name = "private_luarocks",
