feat(plugins/oas-validation): OpenAPI 3.1 validation support (#7833)
Including Bazel build for lua-resty-jsonschema-rs.

KAG-4073 FTI-5596

---------

Co-authored-by: Qi <add_sp@outlook.com>
Co-authored-by: Keery Nie <windmgc@gmail.com>
Co-authored-by: Chrono <chrono_cpp@me.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "distribution/lua-resty-openapi3-deserializer"]
 	path = distribution/lua-resty-openapi3-deserializer
 	url = git@github.com:Kong/lua-resty-openapi3-deserializer.git
+[submodule "distribution/lua-resty-jsonschema-rs"]
+	path = distribution/lua-resty-jsonschema-rs
+	url = git@github.com:Kong/lua-resty-jsonschema-rs.git
