--- a/changelog/unreleased/kong/cp-dp-rpc.yml
+++ b/changelog/unreleased/kong/cp-dp-rpc.yml
@@ -1,3 +1,3 @@
-message: "Remote procedure call (RPC) framework for Hybrid mode deployments"
+message: "Remote procedure call (RPC) framework for Hybrid mode deployments."
 type: feature
 scope: Clustering
