--- a/changelog/unreleased/kong-ee/event_hooks_work_in_hybrid_mode.yml
+++ b/changelog/unreleased/kong-ee/event_hooks_work_in_hybrid_mode.yml
@@ -1,4 +1,4 @@
 message: |
-  Fix an issue that delay validate of event_hooks to avoid unregistered event_hooks in hybrid mode
+  Fixed a problem where event_hooks were prematurely validated in hybrid mode. The fix delays the validation of event_hooks to the point where event_hooks are emitted.
 type: bugfix
 scope: Clustering
