--- a/.bazelrc
+++ b/.bazelrc
@@ -14,6 +14,8 @@ common --color=yes
 common --curses=auto
 
 build --experimental_ui_max_stdouterr_bytes=10485760
+# required to build shared library on macOS
+build --experimental_cc_shared_library
 
 build --show_progress_rate_limit=0
 build --show_timestamps
